--- a/MirrorsExperiment/MirrorsExperiment.csproj
+++ b/MirrorsExperiment/MirrorsExperiment.csproj
@@ -62,6 +62,7 @@
     </Compile>
     <Compile Include="LightBeam.cs" />
     <Compile Include="LightSource.cs" />
+    <Compile Include="MyExtensions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Room.cs" />
